force-app/main/default/objects/VDT_Custom_Objects_Field_Mapping__mdt/VDT_Custom_Objects_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>VDT Custom Objects Field Mapping</label>
    <pluralLabel>VDT Custom Objects Field Mappings</pluralLabel>
</CustomObject>