force-app/main/default/objects/VDT_Custom_Objects_Field_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>