force-app/main/default/objects/VDT_Custom_Objects_Field_Mapping__mdt/fields/Field_Map_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Map_Key__c</fullName>
    <label>Field Map Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>